src/main/scala/mhir/parse/sirop/grammar.txt
# TODO: Add fixed-point number operations and type
# TODO: Allow trailing commas (e.g., in sbuild, in sequence literals)

program    ::= const_decl* accel_decl test_decl*
             | expr

##### Declarations #####################################################################################################

const_decl        ::= "const" ident ":" typ "=" expr

accel_decl        ::= "accelerator" [ "[" accel_annotations "]" ] ident "=" expr
accel_annotations ::= ""
                    | accel_annotation ( "," accel_annotation )*
accel_annotation  ::= ident [ "(" ident ")" ] [ "=" expr ]

test_decl         ::= const_decl
                    | assertion

assertion         ::= "assert" input_specs
                      "yields" expr
                      [ "ignoring" expr ]
                      [ "with" "prefix" expr ]
input_specs       ::= "{" "}"
                    | ""
                    | "{" input_spec ( "," input_spec )* "}"
input_spec        ::= ident "=" expr

##### Expressions ######################################################################################################

expr            ::= expr1200
expr1200        ::= "if" expr "then" expr "else" expr
                  | "iff" expr "then" expr "else" expr
                  | "let" ident [ ":" typ ] "=" expr "in" expr
                  | "letstm" "[" expr "]" ident [ ":" typ ] "=" expr "in" expr
                  | pat_function
                  | function
                  | expr1100
function        ::= "(" ident [ ":" typ ] ")" "=>" expr
                  | ident "=>" expr
pat_function    ::= "@" pattern "=>" expr
pattern         ::= ident [ ":" typ ]
                  | "()" | "(" pattern ",)" | "(" pattern ( "," pattern )+ ")"
expr1100        ::= expr1000 ( "||"                                              expr1000 )*
expr1000        ::= expr900 ( "&&"                                               expr900 )*
expr900         ::= expr800 ( "|"                                                expr800 )*
expr800         ::= expr700 ( "&"                                                expr700 )*
expr700         ::= expr600 ( ( eq_symbol | neq_symbol )                         expr600 )*
expr600         ::= expr500 ( ( lt_symbol | gt_symbol | leq_symbol | geq_symbol) expr500 )*
expr500         ::= expr400 ( bitshift_symbol                                    expr400 )*
expr400         ::= expr300 ( ( plus_symbol | minus_symbol )                     expr300 )*
expr300         ::= expr200 ( ( times_symbol | div_symbol | mod_symbol )         expr200 )*
eq_symbol       ::= "==" | "==`"
neq_symbol      ::= "!="
lt_symbol       ::= "<"  | "<`"
gt_symbol       ::= ">"
leq_symbol      ::= "<="
geq_symbol      ::= ">="
bitshift_symbol ::= "<<" | ">>" | ">>>"
plus_symbol     ::= "+"  | "+`"
                  | "+%" | "+%`"
                  | "+^"
minus_symbol    ::= "-"
                  | "-%" | "-%`"
                  | "-^"
times_symbol    ::= "*" | "*`"
                  | "*%" | "*%`"
                  | "*^"
div_symbol      ::= "/" | "/`"
mod_symbol      ::= "%" | "%`"
binop_symbol    ::= "||" | "&&"
                  | "|" | "&"
                  | eq_symbol
                  | neq_symbol
                  | lt_symbol
                  | gt_symbol
                  | leq_symbol
                  | geq_symbol
                  | bitshift_symbol
                  | plus_symbol
                  | minus_symbol
                  | times_symbol
                  | div_symbol
                  | mod_symbol
expr200         ::= "!" expr200
                  | "~" expr200
                  # You can use these symbols in isolation to describe a unary function
                  | "!" | "~"
                  | expr100
expr100         ::= "vbuild" "(" expr ")" "{" function "}" expr100'
                  | "sbuild" "(" expr [ "@" expr ] ")"
                             "(" expr "," expr [ "," expr ] ")"
                             "{" accumulators "}"
                             "{" producers "}"
                             expr100'
                  | "sdata" "(" expr ")" expr100'
                  | expr0 expr100'
accumulators    ::= ""
                  | accumulator ( "," accumulator )*
accumulator     ::= "(" ident ":" typ [ "@" expr ] ")" "=" "{" "init" ":" expr "," "next" ":" expr "}"
producers       ::= ""
                  | producer ( "," producer )*
producer        ::= "(" ident ":" stm_typ [ "@" expr ] ")" "=" "{" "stm" ":" expr "," "ready" ":" expr "}"
expr100'          ::= ""
                  | [ ":[" typ "]" ] "(" expr_list ")" expr100'
                  | "." nat expr100'
                  | "." ident [ ":[" typ "]" ] "(" expr_list ")" expr100'
                  | "[" expr "]" expr100'
                  | "[" [ expr ] ":" [ expr ] [ ":" [ expr ] ] "]" expr100'
expr0           ::= "(" expr ")"
                  | "{" expr "}"
                  | "()" | "(" expr "," ")" | "(" expr ( "," expr )+ ")"
                  | ident
                  | "undefined" [ ":" typ ]
                  | "default" "[" typ "]"
                  | "true" | "false"
                  | int_cst
                  | vec_literal
                  | stm_literal
                  # You can use these symbols in isolation to describe a binary function
                  | binop_symbol
int_cst         ::= ( "+" | "-" | "" ) nat [ ":" typ ]
expr_list       ::= ""
                  | expr ( "," expr )*
# Type annotation is required if the vec/stm literal is empty.
# Without it, the type checker cannot handle empty sequences.
# Type annotation is forbidden otherwise.
# If it was allowed, the compiler would need to carefully check that
# the type is correct.
# Furthermore, the type annotation cannot be stored directly in the
# literal, since the elements might not have been type checked yet.
# In short, supporting type annotations on any sequence literals would
# require a new primitive like `AssertType` which causes the type
# checker to check that the given expression has the expected type.
vec_literal     ::= "[" "]v" ":" vec_typ
                  | "[" expr ( "," expr )* "]v"
stm_literal     ::=                                  "[" "]s"                    ":" stm_typ
                  |                                  "[" expr ( "," expr )* "]s"
                  | "[" "]s"                    "++" "[" "]s"                    ":" stm_typ
                  | "[" "]s"                    "++" "[" expr ( "," expr )* "]s"
                  | "[" expr ( "," expr )* "]s" "++" "[" "]s"
                  | "[" expr ( "," expr )* "]s" "++" "[" expr ( "," expr )* "]s"

# First(typ) = { "bool", "u", "i", "(", "Vec", "Stm" }
typ             ::= "(" typ ")"
                  | "()" | "(" typ "," ")" | "(" typ ( "," typ )+ ")"
                  | "bool" typ'
                  | "u" nat typ'
                  | "i" nonzero_nat typ'
                  | vec_typ typ'
                  | stm_typ typ'
vec_typ         ::= "Vec" "[" typ "," expr "]"
stm_typ         ::= "Stm" "[" typ "," expr "]"
typ'            ::= ""
                  | "->" typ

ident           ::= (letter | "_") (digit | letter | "_" )*

nat             ::= "0" | nonzero_nat
nonzero_nat     ::= nonzero_digit ( digit | "_" )*

##### Statements (for the REPL) ########################################################################################

stmt            ::= expr
                  | "exit"
                  | ident "=" expr
