src/main/scala/mhir/parse/sirop/Parser.scala
package mhir.parse.sirop

import com.typesafe.scalalogging.Logger
import mhir.canonicalize._
import mhir.ir._
import mhir.parse.{SourcePoint, SyntaxError}
import mhir.sugar._
import mhir.typecheck.{NameError, TypeCheck}
import os.Path

import scala.annotation.tailrec
import scala.collection.immutable.Queue

object Parser {

  private implicit val logger: Logger = Logger(getClass.getName)

  def parse(f: Path, constOverrides: Map[String, String] = Map()): Program = {
    parse(Lexer.lex(f), constOverrides)
  }

  def parse(code: String): Program = {
    parse(Lexer.lex(code), Map[String, String]())
  }

  private def parse(
      tokens: Seq[Token],
      constOverrides: Map[String, String]
  ): Program = {
    val (prog, remainingTokens) = parseProgram(tokens, constOverrides)
    if (remainingTokens.nonEmpty) {
      val loc = remainingTokens.head.loc
      throw SyntaxError("unexpected tokens remaining at end of file", loc)
    }
    val unusedConstOverrides = constOverrides.keySet
      .diff(prog.constants.map({ case ConstDecl(x, _) => x.name }).toSet)
      .diff(prog.test.collect({ case ConstDecl(x, _) => x.name }).toSet)
    if (unusedConstOverrides.nonEmpty) {
      val str =
        unusedConstOverrides.toSeq.sorted.map(x => s"'$x'").mkString(", ")
      throw NameError(
        s"the following constant(s) mentioned in -c command-line argument do not exist: $str"
      )
    }
    prog
  }

  private def parseProgram(
      tokens: Seq[Token],
      constOverrides: Map[String, String]
  ): (Program, Seq[Token]) = {
    tokens.headOption match {
      case Some(tok) if FirstMainDecl.contains(tok.category) =>
        val (constants, rest1) = parseConstDecls(tokens, Seq(), constOverrides)
        val (accel, rest2) = parseAcceleratorDecl(rest1, constants)
        val (test, rest3) = parseTestDecls(
          rest2,
          constants.map({ case ConstDecl(x, _) => x -> x.typ }).toMap,
          Seq(),
          constOverrides
        )
        val prog = Program(constants, accel, test)
        (prog, rest3)
      case _ =>
        val (e, rest) = parseExpr(tokens, Map())
        (Program(e), rest)
    }
  }

  private val FirstMainDecl: Set[TokenCategory] =
    Set(ConstToken, AcceleratorToken)

  private val FirstTestDecl: Set[TokenCategory] = Set(ConstToken, AssertToken)

  @tailrec
  private def parseTestDecls(
      tokens: Seq[Token],
      constants: Map[Param, Type],
      testDecls: Seq[TestDecl],
      constOverrides: Map[String, String]
  ): (Seq[TestDecl], Seq[Token]) = {
    tokens.headOption match {
      case Some(tok) if FirstTestDecl.contains(tok.category) =>
        val (testDecl, rest1) = parseTestDecl(tokens, constants, constOverrides)
        val newConstants = testDecl match {
          case ConstDecl(x, _) =>
            assert(x.hasType)
            constants + (x -> x.typ)
          case _ =>
            constants
        }
        parseTestDecls(
          rest1,
          newConstants,
          testDecls :+ testDecl,
          constOverrides
        )
      case _ =>
        (testDecls, tokens)
    }
  }

  private def parseTestDecl(
      tokens: Seq[Token],
      constants: Map[Param, Type],
      constOverrides: Map[String, String]
  ): (TestDecl, Seq[Token]) = {
    tokens.headOption match {
      case Some(_: ConstToken) =>
        parseConstDecl(tokens, constants, constOverrides)
      case Some(_: AssertToken) => parseAssertion(tokens, constants)
      case _ =>
        throw new IllegalArgumentException(
          s"parseTestDecl called with invalid arguments (next token: ${constants.headOption})"
        )
    }
  }

  @tailrec
  private def parseConstDecls(
      tokens: Seq[Token],
      constants: Seq[ConstDecl],
      constOverrides: Map[String, String]
  ): (Seq[ConstDecl], Seq[Token]) = {
    tokens.headOption match {
      case Some(_: ConstToken) =>
        val (decl, rest) = parseConstDecl(
          tokens,
          constants.map({ case ConstDecl(x, _) => x -> x.typ }).toMap,
          constOverrides
        )
        parseConstDecls(rest, constants :+ decl, constOverrides)
      case _ =>
        (constants, tokens)
    }
  }

  private def parseConstDecl(
      tokens: Seq[Token],
      constants: Map[Param, Type],
      constOverrides: Map[String, String]
  ): (ConstDecl, Seq[Token]) = {
    logger.trace(s"(${loc(tokens)}) parsing const_decl")
    val (_, rest1) = expect(ConstToken, tokens)
    val (nameTok @ IdentToken(name), rest2) = expect(IdentToken, rest1)
    val rest3 = rest2.headOption match {
      case Some(_: ColonToken) => rest2.tail
      case _ =>
        throw SyntaxError(
          "missing type annotation. All const declarations require a type annotation.",
          nameTok.loc
        )
    }
    val (typ, rest4) = parseTyp(rest3, constants)
    val (_, rest5) = expect(AssignToken, rest4)
    // Need to consume the right-hand side even if an override is provided
    val (sourceVal, rest6) = parseExpr(rest5, constants)
    val rhs = constOverrides.get(name) match {
      case None => sourceVal
      case Some(overrideSrc) =>
        logger.info(
          s"replacing value of const $name with override: $overrideSrc"
        )
        val tokens = Lexer.lex(overrideSrc)
        val (overrideVal, remainingTokens) = parseExpr(tokens, constants)
        if (remainingTokens.nonEmpty) {
          val loc = remainingTokens.head.loc
          throw SyntaxError(
            s"in override for const $name: unexpected tokens remaining at end of expression",
            loc
          )
        }
        overrideVal
    }
    val x = Param(name, -1)(typ)
    (ConstDecl(x, ReshapeData(rhs, typ)()), rest6)
  }

  private def parseAcceleratorDecl(
      tokens: Seq[Token],
      constants: Seq[ConstDecl]
  ): (AccelDecl, Seq[Token]) = {
    logger.trace(s"(${loc(tokens)}) parsing accel_decl")
    val (_, rest1) = expect(AcceleratorToken, tokens)
    val (annotations, annotationsByParam, rest2) = rest1.headOption match {
      case Some(_: LeftSquareToken) =>
        val rest2 = rest1.tail
        val (annotations, annotationsByParam, rest3) =
          parseAcceleratorAnnotations(rest2)
        val (_, rest4) = expect(RightSquareToken, rest3)
        (annotations, annotationsByParam, rest4)
      case _ => (Map[String, Expr](), Map[(String, Param), Expr](), rest1)
    }
    val (IdentToken(name), rest3) = expect(IdentToken, rest2)
    val (_, rest4) = expect(AssignToken, rest3)
    val (body, rest5) =
      parseExpr(
        rest4,
        constants.map({ case ConstDecl(x, _) => x -> x.typ }).toMap
      )
    (AccelDecl(name, body, annotations, annotationsByParam), rest5)
  }

  private def parseAcceleratorAnnotations(
      tokens: Seq[Token]
  ): (Map[String, Expr], Map[(String, Param), Expr], Seq[Token]) = {
    tokens.headOption match {
      case Some(_: IdentToken) =>
        var annotations = Map[String, Expr]()
        var annotationsByParam = Map[(String, Param), Expr]()
        var rest = tokens
        def parseOneAndStore(): Unit = {
          parseAcceleratorAnnotation(rest) match {
            case ((key, None, value), rest1) =>
              annotations += (key -> value)
              rest = rest1
            case ((key, Some(param), value), rest1) =>
              annotationsByParam += ((key, param) -> value)
              rest = rest1
          }
        }
        parseOneAndStore()
        while (rest.headOption.exists(_.category == CommaToken)) {
          rest = rest.tail // drop the comma
          parseOneAndStore()
        }
        (annotations, annotationsByParam, rest)
      case _ => (Map(), Map(), tokens)
    }
  }

  private def parseAcceleratorAnnotation(
      tokens: Seq[Token]
  ): ((String, Option[Param], Expr), Seq[Token]) = {
    val (keyTok @ IdentToken(key), rest1) = expect(IdentToken, tokens)
    val (param, rest2) = rest1.headOption match {
      case Some(_: LeftParToken) =>
        val rest1_1 = rest1.tail
        val (IdentToken(x), rest1_2) = expect(IdentToken, rest1_1)
        val (_, rest1_3) = expect(RightParToken, rest1_2)
        (Some(Param(x, -1)(Missing)), rest1_3)
      case _ => (None, rest1)
    }
    val (value, rest3) = rest2.headOption match {
      case Some(_: AssignToken) =>
        val rest2_1 = rest2.tail
        val (e, rest2_2) = parseExpr(rest2_1, Map())
        (Some(e), rest2_2)
      case _ => (None, rest2)
    }
    Program.checkAnnotation(
      key,
      param,
      value,
      msg => throw SyntaxError(msg, keyTok.loc)
    )
    ((key, param, value.getOrElse(True)), rest3)
  }

  private def parseAssertion(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Assertion, Seq[Token]) = {
    val (_, rest1) = expect(AssertToken, tokens)
    val (inputs, rest2) = parseInputSpecs(rest1, constants)
    val (_, rest3) = expect(YieldsToken, rest2)
    val (expectedOutput, rest4) = parseExpr(rest3, constants)
    val (ignore, rest5) = rest4.headOption match {
      case Some(_: IgnoringToken) =>
        val rest4_1 = rest4.tail
        val (e, rest4_2) = parseExpr(rest4_1, constants)
        (Some(e), rest4_2)
      case _ =>
        (None, rest4)
    }
    val (prefixCondition, rest6) = rest5.headOption match {
      case Some(_: WithToken) =>
        val rest5_1 = rest5.tail
        val (_, rest5_2) = expect(PrefixToken, rest5_1)
        val (f, rest5_3) = parseExpr(rest5_2, constants)
        (Some(f), rest5_3)
      case _ =>
        (None, rest5)
    }
    (Assertion(inputs, expectedOutput, ignore, prefixCondition), rest6)
  }

  private def parseInputSpecs(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Map[Param, Expr], Seq[Token]) = {
    tokens.headOption match {
      case Some(_: LeftCurlyToken) =>
        val rest1 = tokens.tail
        rest1.headOption match {
          case Some(_: RightCurlyToken) =>
            (Map(), rest1.tail)
          case _ =>
            val (IdentToken(x), rest2) = expect(IdentToken, rest1)
            val (_, rest3) = expect(AssignToken, rest2)
            var (e, rest4) = parseExpr(rest3, constants)
            var inputs = Map(Param(x, -1)(Missing) -> e)
            while (rest4.headOption.exists(_.category == CommaToken)) {
              val (_, rest5) = expect(CommaToken, rest4)
              val (IdentToken(x), rest6) = expect(IdentToken, rest5)
              val (_, rest7) = expect(AssignToken, rest6)
              val (e, rest8) = parseExpr(rest7, constants)
              inputs += (Param(x, -1)(Missing) -> e)
              rest4 = rest8
            }
            val (_, rest5) = expect(RightCurlyToken, rest4)
            (inputs, rest5)
        }
      case _ =>
        (Map(), tokens)
    }
  }

  def parseStmt(code: String, constants: Map[Param, Type]): Stmt = {
    val (s, remainingTokens) = parseStmt(Lexer.lex(code).toList, constants)
    if (remainingTokens.nonEmpty) {
      val loc = remainingTokens.head.loc
      throw SyntaxError("unexpected tokens remaining at end of file", loc)
    }
    s
  }

  private def parseStmt(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Stmt, Seq[Token]) = {
    tokens.headOption match {
      case Some(_: ExitToken) =>
        (ExitStmt, tokens.tail)
      case Some(_: TypeToken) =>
        val rest1 = tokens.tail
        val (e, rest2) = parseExpr(rest1, constants)
        (TypeOfStmt(e), rest2)
      case Some(IdentToken(x)) =>
        val rest1 = tokens.tail
        rest1.headOption match {
          case Some(_: AssignToken) =>
            val rest2 = rest1.tail
            val (e, rest3) = parseExpr(rest2, constants)
            (SetStmt(Param(x, -1)(Missing), e), rest3)
          case _ =>
            val (e, rest) = parseExpr(tokens, constants)
            (ExprStmt(e), rest)
        }
      case _ =>
        val (e, rest) = parseExpr(tokens, constants)
        (ExprStmt(e), rest)
    }
  }

  private val FirstExpr0: Set[TokenCategory] = Set(
    LeftParToken,
    LeftCurlyToken,
    IdentToken,
    UndefinedToken,
    DefaultToken,
    TrueToken,
    FalseToken,
    PlusToken,
    MinusToken,
    NatToken,
    LeftSquareToken,
    LogOrToken,
    LogAndToken,
    BitOrToken,
    BitAndToken,
    EqToken,
    EqTickToken,
    NeqToken,
    LtToken,
    LtTickToken,
    GtToken,
    LeqToken,
    GeqToken,
    LShiftToken,
    ARShiftToken,
    LRShiftToken,
    PlusToken,
    PlusTickToken,
    PlusPercentToken,
    PlusPercentTickToken,
    PlusCaretToken,
    MinusToken,
    MinusPercentToken,
    MinusPercentTickToken,
    MinusCaretToken,
    TimesToken,
    TimesTickToken,
    TimesPercentToken,
    TimesPercentTickToken,
    TimesCaretToken,
    SlashToken,
    SlashTickToken,
    PercentToken,
    PercentTickToken
  )
  private val FirstExpr100: Set[TokenCategory] =
    Set(VbuildToken, SbuildToken, SdataToken) ++ FirstExpr0
  private val FirstExpr200: Set[TokenCategory] =
    Set(BangToken, TildeToken) ++ FirstExpr100
  private val FirstExpr: Set[TokenCategory] =
    Set(
      // expr1200
      IfToken,
      IffToken,
      AtToken,
      LetStmToken,
      LetToken
    ) ++ FirstExpr200

  private def parseExpr(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    logger.trace(s"(${loc(tokens)}) parsing expr")
    parseExpr1200(tokens, constants)
  }

  private def parseExpr1200(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    tokens.headOption match {
      case Some(_: IfToken) =>
        val rest1 = tokens.tail
        val (c, rest2) = parseExpr(rest1, constants)
        val (_, rest3) = expect(ThenToken, rest2)
        val (t, rest4) = parseExpr(rest3, constants)
        val (_, rest5) = expect(ElseToken, rest4)
        val (f, rest6) = parseExpr(rest5, constants)
        (SmartIf(c, t, f)(), rest6)
      case Some(_: IffToken) =>
        val rest1 = tokens.tail
        val (c, rest2) = parseExpr(rest1, constants)
        val (_, rest3) = expect(ThenToken, rest2)
        val (t, rest4) = parseExpr(rest3, constants)
        val (_, rest5) = expect(ElseToken, rest4)
        val (f, rest6) = parseExpr(rest5, constants)
        (Mux(c, t, f)(), rest6)
      case Some(_: LetToken) =>
        val rest1 = tokens.tail
        val (IdentToken(x), rest2) = expect(IdentToken, rest1)
        val (typ, rest3) = rest2.headOption match {
          case Some(_: ColonToken) => parseTyp(rest2.tail, constants)
          case _                   => (Missing, rest2)
        }
        val (_, rest4) = expect(AssignToken, rest3)
        val (in, rest5) = parseExpr(rest4, constants)
        val (_, rest6) = expect(InToken, rest5)
        val (out, rest7) = parseExpr(rest6, constants)
        (Let(Param(x, -1)(typ), in, out)(), rest7)
      case Some(_: LetStmToken) =>
        val rest1 = tokens.tail
        val (_, rest2) = expect(LeftSquareToken, rest1)
        val (bufSize, rest3) = parseExpr(rest2, constants)
        val (_, rest4) = expect(RightSquareToken, rest3)
        val (IdentToken(ident), rest5) = expect(IdentToken, rest4)
        val (typ, rest6) = rest5.headOption match {
          case Some(_: ColonToken) => parseTyp(rest5.tail, constants)
          case _                   => (Missing, rest5)
        }
        val (_, rest7) = expect(AssignToken, rest6)
        val (in, rest8) = parseExpr(rest7, constants)
        val (_, rest9) = expect(InToken, rest8)
        val (out, rest10) = parseExpr(rest9, constants)
        (LetStm(bufSize, Param(ident, -1)(typ), in, out)(), rest10)
      case Some(_: AtToken) =>
        val rest1 = tokens.tail
        val (pat, rest2) = parsePattern(rest1, constants)
        val (_, rest3) = expect(DoubleArrowToken, rest2)
        val (body, rest4) = parseExpr(rest3, constants)
        (PatternFunction(pat, body)(), rest4)
      case Some(IdentToken(param)) =>
        val rest1 = tokens.tail
        rest1.headOption match {
          case Some(_: DoubleArrowToken) =>
            val rest2 = rest1.tail
            val (body, rest3) = parseExpr(rest2, constants)
            (Function(Param(param, -1)(Missing), body)(), rest3)
          case _ => parseExpr1100(tokens, constants)
        }
      case Some(_: LeftParToken) /* ( */ =>
        val rest1 = tokens.tail
        rest1.headOption match {
          case Some(IdentToken(param)) /* (x */ =>
            val rest2 = rest1.tail
            rest2.headOption match {
              case Some(_: ColonToken) /* (x: */ =>
                val rest3 = rest2.tail
                val (typ, rest4) = parseTyp(rest3, constants)
                val (_, rest5) = expect(RightParToken, rest4)
                val (_, rest6) = expect(DoubleArrowToken, rest5)
                val (body, rest7) = parseExpr(rest6, constants)
                (Function(Param(param, -1)(typ), body)(), rest7)
              case Some(_: RightParToken) /* (x) */ =>
                val rest3 = rest2.tail
                rest3.headOption match {
                  case Some(_: DoubleArrowToken) /* (x) => */ =>
                    val rest4 = rest3.tail
                    val (body, rest5) = parseExpr(rest4, constants)
                    (Function(Param(param, -1)(Missing), body)(), rest5)
                  case _ => parseExpr1100(tokens, constants)
                }
              case _ => parseExpr1100(tokens, constants)
            }
          case _ => parseExpr1100(tokens, constants)
        }
      case _ => parseExpr1100(tokens, constants)
    }
  }

  private def parsePattern(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Pattern, Seq[Token]) = {
    tokens.headOption match {
      case Some(IdentToken(name)) =>
        val rest1 = tokens.tail
        rest1.headOption match {
          case Some(_: ColonToken) =>
            val rest2 = rest1.tail
            val (typ, rest3) = parseTyp(rest2, constants)
            (ParamPattern(Param(name, -1)(typ)), rest3)
          case _ =>
            (ParamPattern(Param(name, -1)(Missing)), rest1)
        }
      case Some(_: LeftParToken) =>
        parseTuplePattern(tokens, constants)
      case Some(tok) =>
        throw SyntaxError(s"unexpected token: ${tok.quot}", tok.loc)
      case None => throw SyntaxError("unexpected end of file", None)
    }
  }

  private def parseTuplePattern(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Pattern, Seq[Token]) = {
    def handleRest(
        lpar: LeftParToken,
        firstPattern: Pattern,
        tokens: Seq[Token]
    ): (Pattern, Seq[Token]) = {
      var rest1 = tokens
      var elems = Seq(firstPattern)
      while (rest1.headOption.exists(_.category == CommaToken)) {
        val (nextElem, rest4) = parsePattern(rest1.tail, constants)
        rest1 = rest4
        elems = elems :+ nextElem
      }
      val (_, rest2) = expect(RightParToken, rest1)
      val pat = TuplePattern(elems: _*)
      val duplicateNames = pat.paramPrefixes
        .groupBy(x => x)
        .collect({ case (x, Seq(_, _, _*)) => x })
        .toSeq
        .sorted
      if (duplicateNames.nonEmpty) {
        val list = duplicateNames.mkString(", ")
        throw SyntaxError(
          s"duplicate parameter(s) in pattern: $list",
          lpar.loc
        )
      }
      (pat, rest2)
    }

    val (lpar: LeftParToken, rest1) = expect(LeftParToken, tokens)
    rest1.headOption match {
      case Some(_: RightParToken) =>
        val rest2 = rest1.tail
        (TuplePattern(), rest2)
      case _ =>
        val (firstPat, rest2) = parsePattern(rest1, constants)
        rest2.headOption match {
          case Some(_: RightParToken) =>
            throw SyntaxError(
              "invalid pattern."
                + s" To match a 1-tuple, add a comma, as in ($firstPat,)."
                + " Otherwise, omit the parentheses.",
              lpar.loc
            )
          case Some(_: CommaToken) =>
            val rest3 = rest2.tail
            rest3.headOption match {
              case Some(_: RightParToken) =>
                (TuplePattern(firstPat), rest3.tail)
              case _ => handleRest(lpar, firstPat, rest2)
            }
          case _ => handleRest(lpar, firstPat, rest2)
        }
    }
  }

  private def parseExpr1100(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    val (e, rest) = parseExpr1000(tokens, constants)
    parseExpr1100Prime(e, rest, constants)
  }

  @tailrec
  private def parseExpr1100Prime(
      e1: Expr,
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    tokens.headOption match {
      case Some(_: LogOrToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr1000(rest1, constants)
        parseExpr1100Prime(e1 || e2, rest2, constants)
      case _ => (e1, tokens)
    }
  }

  private def parseExpr1000(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    val (e, rest) = parseExpr900(tokens, constants)
    parseExpr1000Prime(e, rest, constants)
  }

  @tailrec
  private def parseExpr1000Prime(
      e1: Expr,
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    tokens.headOption match {
      case Some(_: LogAndToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr900(rest1, constants)
        parseExpr1000Prime(e1 && e2, rest2, constants)
      case _ => (e1, tokens)
    }
  }

  private def parseExpr900(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    val (e, rest) = parseExpr800(tokens, constants)
    parseExpr900Prime(e, rest, constants)
  }

  @tailrec
  private def parseExpr900Prime(
      e1: Expr,
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    tokens.headOption match {
      case Some(_: BitOrToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr800(rest1, constants)
        parseExpr900Prime(BitwiseOr(e1, e2)(), rest2, constants)
      case _ => (e1, tokens)
    }
  }

  private def parseExpr800(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    val (e, rest) = parseExpr700(tokens, constants)
    parseExpr800Prime(e, rest, constants)
  }

  @tailrec
  private def parseExpr800Prime(
      e1: Expr,
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    tokens.headOption match {
      case Some(_: BitAndToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr700(rest1, constants)
        parseExpr800Prime(BitwiseAnd(e1, e2)(), rest2, constants)
      case _ => (e1, tokens)
    }
  }

  private def parseExpr700(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    val (e, rest) = parseExpr600(tokens, constants)
    parseExpr700Prime(e, rest, constants)
  }

  @tailrec
  private def parseExpr700Prime(
      e1: Expr,
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    tokens.headOption match {
      case Some(_: EqToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr600(rest1, constants)
        parseExpr700Prime(SmartEqual(e1, e2)(), rest2, constants)
      case Some(_: EqTickToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr600(rest1, constants)
        parseExpr700Prime(Equal(e1, e2)(), rest2, constants)
      case Some(_: NeqToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr600(rest1, constants)
        parseExpr700Prime(SmartNotEqual(e1, e2)(), rest2, constants)
      case _ => (e1, tokens)
    }
  }

  private def parseExpr600(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    val (e, rest) = parseExpr500(tokens, constants)
    parseExpr600Prime(e, rest, constants)
  }

  @tailrec
  private def parseExpr600Prime(
      e1: Expr,
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    tokens.headOption match {
      case Some(_: LtTickToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr500(rest1, constants)
        parseExpr600Prime(LessThan(e1, e2)(), rest2, constants)
      case Some(_: LtToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr500(rest1, constants)
        parseExpr600Prime(SmartLessThan(e1, e2)(), rest2, constants)
      case Some(_: GtToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr500(rest1, constants)
        parseExpr600Prime(SmartGreaterThan(e1, e2)(), rest2, constants)
      case Some(_: LeqToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr500(rest1, constants)
        parseExpr600Prime(SmartLessThanOrEqual(e1, e2)(), rest2, constants)
      case Some(_: GeqToken) =>
        val rest1 = tokens.tail
        val (e2, rest2) = parseExpr500(rest1, constants)
        parseExpr600Prime(SmartGreaterThanOrEqual(e1, e2)(), rest2, constants)
      case _ => (e1, tokens)
    }
  }

  private def parseExpr500(
      tokens: Seq[Token],
      constants: Map[Param, Type]
  ): (Expr, Seq[Token]) = {
    val (e, rest) = parseExpr400(tokens, constants)
    parseExpr500Prime(e, rest, constants)
  }
